<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="10dp">
        <LinearLayout
            android:id="@+id/spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:text="@string/frequency"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/sensor_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/frequency_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/data_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acceleration"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/data_acc_x"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/data_acc_y"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/data_acc_z"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"
                        android:textAlignment="viewEnd"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/data_gyro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gyro"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/data_gyro_x"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/data_gyro_y"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/data_gyro_z"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"
                        android:textAlignment="viewEnd"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/data_magn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/magn"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/data_magn_x"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/data_magn_y"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/data_magn_z"
                        android:layout_width="0dp"
                        android:layout_weight="0.333"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textColor="@color/white"
                        android:textAlignment="viewEnd"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:cardCornerRadius="16dp"
        android:elevation="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_acc"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.333"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_gyro"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.333"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_magn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.333"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--
    <TextView
        android:id="@+id/device_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/no_device"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/no_data"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@id/device_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/data_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:menu="@menu/navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>